--- a/style.css
+++ b/style.css
@@ -7,10 +7,8 @@
   font-family: "Roboto", "san-serif";
   outline: none;
 }
-html {
-  background: linear-gradient(to top left, #50085b, #6d0c0c);
-}
 body {
+  background: linear-gradient(to bottom left, #50085b, #6d0c0c) fixed;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,6 +46,57 @@ body::before {
   border-radius: 0.5em;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(7.4px);
+}
+
+#clockContainer {
+  position: relative;
+  margin: auto;
+  height: 190.4px;
+  /*to make the height and width responsive*/
+  width: 190.4px;
+  background: url(clock.png) no-repeat;
+  /*setting our background image*/
+  background-size: 100%;
+  margin-bottom: 10px;
+}
+h1 {
+  text-align: center;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 10px;
+  font-family: "poppins";
+  font-weight: 400;
+}
+#hour,
+#minute,
+#second {
+  position: absolute;
+  background: black;
+  border-radius: 10px;
+  transform-origin: bottom;
+}
+
+#hour {
+  width: 1.8%;
+  height: 25%;
+  top: 25%;
+  left: 48.85%;
+  opacity: 0.8;
+}
+
+#minute {
+  width: 1.6%;
+  height: 30%;
+  top: 19%;
+  left: 48.9%;
+  opacity: 0.8;
+}
+
+#second {
+  width: 1%;
+  height: 40%;
+  top: 9%;
+  left: 49.25%;
+  opacity: 0.8;
 }
 
 .current-time {
@@ -110,7 +159,63 @@ button#set:active {
   transform: scale(1);
 }
 
+.alarm {
+  display: grid;
+  grid-template-columns: 9fr 1fr 2fr;
+  margin-top: 1.5rem;
+  align-items: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  padding-bottom: 0.6em;
+}
+
+.alarm input[type="checkbox"] {
+  appearance: none;
+  height: 1.6em;
+  width: 3.75em;
+
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+}
+
+.alarm input[type="checkbox"]::before {
+  position: absolute;
+  content: "";
+  background: #5d0429;
+  height: 1.1em;
+  width: 1.5em;
+  border-radius: 3px;
+  top: 0.25em;
+  left: 0.3em;
+}
+
+.alarm input[type="checkbox"]:checked {
+  background: rgba(242, 238, 238, 0.7);
+}
+
+.alarm input[type="checkbox"]:checked::before {
+  background: #f21470;
+  left: 2em;
+}
+
+.deleteBtn {
+  background-color: transparent;
+  color: #d10c5e;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  transition: all 0.3s ease;
+}
+.deleteBtn:hover {
+  color: #ed1616;
+}
+
 @media screen and (max-width: 500px) {
+  .body {
+    background-color: #fff;
+  }
   .wrapper {
     width: 80%;
   }
